The entire bird is aligned correctly

--- a/style.css
+++ b/style.css
@@ -254,16 +254,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
-    transform-origin: 50% 50%; /* hinge */
-    animation: teeter 5s infinite cubic-bezier(0.42, 0, 0.58, 1);
+    justify-content: flex-start;
+    transform-origin: 20% 80%; /* hinge */
+    animation: teeter 7s infinite cubic-bezier(0.42, 0, 0.58, 1);
     margin-bottoM: -60px;
     z-index: 3;
 }
 
 @keyframes teeter {
     0%   { transform: rotate(0deg); }
-    25%  { transform: rotate(-20deg); }
+    25%  { transform: rotate(-90deg); }
     50%  { transform: rotate(0deg); }
     75%  { transform: rotate(5deg); }
     100% { transform: rotate(0deg); }
@@ -296,12 +296,12 @@
 
 .bird-leg {
     width: 30px;
-    height: 100px;
+    height: 130px;
     background-color: blue;
 }
 
 .bird-torso {
-    height: 160px;
+    height: 180px;
     width: 15px;
     background-color: white;
 }
@@ -310,20 +310,15 @@
     background-color: red;
     height: 50px;
     width: 15px;
-    top: -330px;
-    position: absolute;
-    left: 72px;
 }
 
 .bird-head {
-    background-color: red;
-    border-radius: 50%;
-    position: absolute;
+    position: relative;
     height: 50px;
     width: 50px;
-    top: -370px;
-    left: 55px;
-    z-index: 1;
+    background-color: red;  
+    border-radius: 50%;
+    top: 5px;
 }
 
 .bird-beak {
